--- a/frontend/src/componentes/header.html
+++ b/frontend/src/componentes/header.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loja Online</title>
+    <title>Loja PXP</title>
     <!-- Adicionando o CSS do Bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Adicionando o Font Awesome para ícones -->
@@ -18,7 +18,7 @@
         <img src="/COdegos/PXP/public/assets/img/logoEscuro.jpeg" alt="Logo" class="logo" style="width: 60px;">
         <div class="d-flex align-items-center">
             <div class="input-group">
-                <input type="text" class="form-control" placeholder="Buscar produtos">
+                <input type="text" class="form-control" placeholder="Buscarl produtos">
                 <button class="btn btn-outline-light">
                     <i class="fa fa-search"></i>
                 </button>
