--- a/frontend/src/paginas/chuteira crazyfast.html
+++ b/frontend/src/paginas/chuteira crazyfast.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Produto - Loja</title>
+    <title>Chuteira X Crazyfast</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../../public/assets/css/estilo.css">
@@ -17,22 +17,21 @@
         <div class="row">
             <!-- Imagem do Produto -->
             <div class="col-md-6">
-                <img src="https://via.placeholder.com/500" alt="Produto Exemplo" class="img-fluid">
+                <img src="/produtos/calçados/chuteira crazifast.jpeg" alt="Produto Exemplo" class="img-fluid">
             </div>
 
             <!-- Detalhes do Produto -->
             <div class="col-md-6">
-                <h2>Nome do Produto</h2>
+                <h2> Chuteira X Crazyfast.1 Society</h2>
                 <p class="text-muted">Categoria do Produto</p>
                 <h3 class="text-success">R$ 199,99</h3>
 
-                <p class="mt-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam non urna leo. Cras dapibus risus non metus pharetra, eu dictum turpis sollicitudin.</p>
-
                 <ul>
                     <li><strong>Características:</strong></li>
-                    <li>Material resistente e durável</li>
-                    <li>Design moderno e elegante</li>
-                    <li>Disponível nas cores preto e branco</li>
+                    <li>Material: Material Sintético</li>
+                    <li>Forração: Tecido Espumado </li>
+                    <li>Ajuste: Cadarço</li>
+                    <li>Palmilha: EVA de 3mm</li>
                 </ul>
 
                 <div class="mt-4">
@@ -48,8 +47,12 @@
         <!-- Descrição Detalhada -->
         <section class="mt-5">
             <h4>Descrição Detalhada</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam non urna leo. Cras dapibus risus non metus pharetra, eu dictum turpis sollicitudin. Donec euismod, libero ac elementum faucibus, ante leo volutpat metus, sed accumsan erat orci sed lorem. Etiam tincidunt dui sed orci sollicitudin, eu dictum purus blandit. Nunc tempor sem vel mauris suscipit, ac volutpat risus tincidunt. Integer ornare vel lectus at fermentum.</p>
-        </section>
+            <ul>
+                <li>Feita parcialmente com materiais reciclados para treinos de aceleração</li>
+                <li>Feito com uma série de materiais reciclados, o cabedal contém pelo menos 50% de conteúdo reutilizado. </li>
+                <li>Este produto representa apenas uma das nossas soluções para ajudar a acabar com os resíduos plásticos.</li>
+                
+            </ul>
 
         <!-- Avaliações -->
         <section class="mt-5">
