--- a/frontend/src/paginas/loja.html
+++ b/frontend/src/paginas/loja.html
@@ -37,74 +37,49 @@
                 <!-- Exemplo de produto estático -->
                 <div class="col-md-3">
                     <div class="card">
-                        <img src="/prof-loja-modelo/produtos/roupas/camisa-franca.jpeg" class="card-img-top" alt="Produto 1">
+                        <img src="/produtos/roupas/camisa-franca.jpeg" class="card-img-top" alt="Produto 1">
                         <div class="card-body">
-                            <h5 class="card-title">Camisa Seleção França I Home 22/23 Mbappé 10 Torcedor Nike Masculina - Azul</h5>
-                            <p class="card-text">
-                                Clube/Time: França,
-                                Definição da Tecnologia: Tecido de desempenho que afasta o suor da pele paa ajudá-lo a se manter seco e confortável.
-                                Manga: Manga Curta,
-                                Composição: 100% Poliéster reciclado,
-                                Garantia do Fabricante: Contra Defeito de Fabricação
-                                Marca: Nike.
-                                </p>
-                            <a href="produto.html" class="btn btn-primary">Ver Produto</a>
+                            <h5 class="card-title">Camisa Seleção França</h5>
+                            <h3 class="text-success">R$ 179,99</h3>
+                           
+                            <a href="produto.blusafrança.html" class="btn btn-primary">Ver Produto</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="card">
-                        <img src="/prof-loja-modelo/produtos/roupas/camisa-psg.jpeg" class="card-img-top" alt="Produto 2">
+                        <img src="/produtos/calçados/WhatsApp Image 2024-12-01 at 18.13.15.jpeg" class="card-img-top" alt="Produto 2">
                         <div class="card-body">
-                            <h5 class="card-title">Camisa Paris Saint-Germain Away 20/21 s/n° Torcedor Nike Masculina - Branco+Azul</h5>
-                            <p class="card-text">
-                                Time/Clube: Paris Saint-Germain (PSG),
-                                Gola: Polo,
-                                Definição da Tecnologia: Tecido de desempenho que afasta o suor da pele para ajudá-lo a se manter seco e confortável.
-                                Manga: Manga Curta,
-                                Número: Sem número,
-                                Composição: 100% Poliéster,
-                                Importante: Personalização disponível apenas para produtos vendidos e entregues por Netshoes.
-                                Garantia do Fabricante: Contra defeito de fabricação,
-                                Marca: Nike.</p>
-                            <a href="produto.html" class="btn btn-primary">Ver produto</a>
+                            <h5 class="card-title"> Tênis Nike AirMax - Preto/Branco </h5>
+                            <h3 class="text-success" > R$ 149,99</h3>
+                            <a href="produto_Tênis.html" class="btn btn-primary">Ver produto</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="card">
-                        <img src="/prof-loja-modelo/produtos/roupas/calmisa-espanha.jpeg" class="card-img-top" alt="Produto 3">
+                        <img src="/produtos/assesorios/WhatsApp Image 2024-12-03 at 14.40.01.jpeg" class="card-img-top" alt="Produto 3">
                         <div class="card-body">
-                            <h5 class="card-title">Camisa Seleção Holanda Away 20/21 s/n° Torcedor Nike Masculina - Preto+Laranja" descrção curta</h5>
-                            <p class="card-text">
-                                Clube/Time: Holanda
-                                Definição da Tecnologia: Tecido Nike Breathe ajuda a manter você fresco.
-                                Manga: Manga Curta
-                                Escudo: Bordado
-                                Número: Sem número
-                                Composição: 100% Poliéster Reciclado
-                                Garantia do Fabricante: Contra defeito de fabricação
-                                Marca: Nike</p>
-                            <a href="produto.html" class="btn btn-primary">Ver Produto</a>
+                            <h5 class="card-title">BOLSA NIKE ELEMENTAL PREMIUM</h5>
+                            <H3><p class="text-success">
+                                R$ 119,99</p></H3>
+                            <a href="produto_bolsaa.html" class="btn btn-primary">Ver Produto</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="card">
-                        <img src="/prof-loja-modelo/produtos/assesorios/bola.jpg" class="card-img-top" alt="Produto 4">
+                        <img src="/produtos/assesorios/bola.jpg" class="card-img-top" alt="Produto 4">
                         <div class="card-body">
                             <h5 class="card-title">Bola de Futebol Penalty S11</h5>
-                            <p class="card-text">Caracteristicas: 
-                                Peso: 410-450G
-                                Circunferencia: 68-70 CM
-                                Gomos: 14
-                                Laminado: PU
-                                Construção: Termotc</p>
-                            <a href="produto.html" class="btn btn-primary">Ver Produto</a>
+                            <h3><p class="text-success"> 
+                                R$ 149,99</p></h3>
+                            <a href="produto_bola.html" class="btn btn-primary">Ver Produto</a>
                         </div>
                     </div>
                 </div>
             </div>
+            
         </section>
 
         <!-- Seção de Categorias -->
