--- a/frontend/src/paginas/loja.html
+++ b/frontend/src/paginas/loja.html
@@ -31,75 +31,54 @@
 
         <!-- Seção de Produtos em Destaque -->
         <section id="productsSection" class="my-5">
-            <h2 class="text-center mb-4">Mais Vendidos</h2>
+            <h2 class="text-center mb-4">Camisas</h2>
             <div class="row" id="productsList">
                 <!-- Os produtos serão adicionados dinamicamente aqui -->
                 <!-- Exemplo de produto estático -->
                 <div class="col-md-3">
                     <div class="card">
-                        <img src="/prof-loja-modelo/produtos/roupas/camisa-franca.jpeg" class="card-img-top" alt="Produto 1">
+                        <img src="/produtos/roupas/camisa-franca.jpeg" class="card-img-top" alt="Produto 1">
                         <div class="card-body">
-                            <h5 class="card-title">Camisa Seleção França I Home 22/23 Mbappé 10 Torcedor Nike Masculina - Azul</h5>
-                            <p class="card-text">
-                                Clube/Time: França,
-                                Definição da Tecnologia: Tecido de desempenho que afasta o suor da pele paa ajudá-lo a se manter seco e confortável.
-                                Manga: Manga Curta,
-                                Composição: 100% Poliéster reciclado,
-                                Garantia do Fabricante: Contra Defeito de Fabricação
-                                Marca: Nike.
-                                </p>
+                            <h5 class="card-title">Camisa França</h5>
+                            <h3><p class="card-text">
+                                R$ 179,99
+                            </p></h3>
                             <a href="produto.html" class="btn btn-primary">Ver Produto</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="card">
-                        <img src="/prof-loja-modelo/produtos/roupas/camisa-psg.jpeg" class="card-img-top" alt="Produto 2">
+                        <img src ="/produtos/roupas/camisa real madrid.jpeg" class="card-img-top" alt="Produto 2">
                         <div class="card-body">
-                            <h5 class="card-title">Camisa Paris Saint-Germain Away 20/21 s/n° Torcedor Nike Masculina - Branco+Azul</h5>
-                            <p class="card-text">
-                                Time/Clube: Paris Saint-Germain (PSG),
-                                Gola: Polo,
-                                Definição da Tecnologia: Tecido de desempenho que afasta o suor da pele para ajudá-lo a se manter seco e confortável.
-                                Manga: Manga Curta,
-                                Número: Sem número,
-                                Composição: 100% Poliéster,
-                                Importante: Personalização disponível apenas para produtos vendidos e entregues por Netshoes.
-                                Garantia do Fabricante: Contra defeito de fabricação,
-                                Marca: Nike.</p>
+                            <h5 class="card-title">Camisa Real Madrid manga longa</h5>
+                        <h3><p class="card-text">
+                            R$ 149,99
+                                </p></h3>
                             <a href="produto.html" class="btn btn-primary">Ver produto</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="card">
-                        <img src="/prof-loja-modelo/produtos/roupas/calmisa-espanha.jpeg" class="card-img-top" alt="Produto 3">
+                        <img src="/produtos/roupas/camisa inglaterra.jpeg" class="card-img-top" alt="Produto 3">
                         <div class="card-body">
-                            <h5 class="card-title">Camisa Seleção Holanda Away 20/21 s/n° Torcedor Nike Masculina - Preto+Laranja" descrção curta</h5>
-                            <p class="card-text">
-                                Clube/Time: Holanda
-                                Definição da Tecnologia: Tecido Nike Breathe ajuda a manter você fresco.
-                                Manga: Manga Curta
-                                Escudo: Bordado
-                                Número: Sem número
-                                Composição: 100% Poliéster Reciclado
-                                Garantia do Fabricante: Contra defeito de fabricação
-                                Marca: Nike</p>
+                            <h5 class="card-title">Camisa Seleção Inglaterra</h5>
+                        <h3><p class="card-text">
+                            R$ 139,99       
+                        </p></h3>
                             <a href="produto.html" class="btn btn-primary">Ver Produto</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="card">
-                        <img src="/prof-loja-modelo/produtos/assesorios/bola.jpg" class="card-img-top" alt="Produto 4">
+                        <img src="/produtos/roupas/camisa tottenhan.jpeg" class="card-img-top" alt="Produto 4">
                         <div class="card-body">
-                            <h5 class="card-title">Bola de Futebol Penalty S11</h5>
-                            <p class="card-text">Caracteristicas: 
-                                Peso: 410-450G
-                                Circunferencia: 68-70 CM
-                                Gomos: 14
-                                Laminado: PU
-                                Construção: Termotc</p>
+                            <h5 class="card-title">Camisa Tottenham</h5>
+                            <h3><p class="card-text">
+                                R$ 169,99
+                                </p></h3>
                             <a href="produto.html" class="btn btn-primary">Ver Produto</a>
                         </div>
                     </div>
@@ -108,45 +87,115 @@
         </section>
 
         <!-- Seção de Categorias -->
-        <section id="categoriesSection" class="my-5">
-            <h2 class="text-center mb-4">Categorias</h2>
-            <div class="row text-center">
-                <div class="col-md-4">
-                    <a href="#" class="btn btn-outline-primary w-100">Roupas</a>
-                    <img style="width: 230px;" src="/COdegos/PXP/public/assets/img/mais-vendidos.png" alt="">
-                </div>
-                <div class="col-md-4">
-                    <a href="#" class="btn btn-outline-primary w-100">Assesorios</a>
-                    <img style="width: 230px;" src="/COdegos/PXP/public/assets/img/assesorios.jpeg" alt="">
-                </div>
-                <div class="col-md-4">
-                    <a href="#" class="btn btn-outline-primary w-100">Calçados</a>
-                    <img style="width: 230px;" src="/COdegos/PXP/public/assets/img/calcados.png" alt="">
-                </div>
-            </div>
-        </section>
+                <!-- Seção de Produtos em Destaque -->
+                <section id="productsSection" class="my-5">
+                    <h2 class="text-center mb-4">Calçados</h2>
+                    <div class="row" id="productsList">
+                        <!-- Os produtos serão adicionados dinamicamente aqui -->
+                        <!-- Exemplo de produto estático -->
+                        <div class="col-md-3">
+                            <div class="card">
+                                <img src="/produtos/calçados/bota-nike.webp" class="card-img-top" alt="Produto 1">
+                                <div class="card-body">
+                                    <h5 class="card-title">Chuteira Nike Air Zoom Elite Bege</h5>
+                                    <h3><p class="card-text">
+                                        R$ 219,99
+                                    </p></h3>
+                                    <a href="produto.html" class="btn btn-primary">Ver Produto</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="card">
+                                <img src ="/produtos/calçados/WhatsApp Image 2024-12-01 at 18.13.15.jpeg" class="card-img-top" alt="Produto 2">
+                                <div class="card-body">
+                                    <h5 class="card-title">Tênis nike AirMax - preto e Branco</h5>
+                                <h3><p class="card-text">
+                                    R$ 129,99
+                                        </p></h3>
+                                    <a href="produto.html" class="btn btn-primary">Ver produto</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="card">
+                                <img src="/produtos/calçados/tenis-nike-air-max-90-branco-3.jpg" class="card-img-top" alt="Produto 3">
+                                <div class="card-body">
+                                    <h5 class="card-title">Tênis nike AirMAx 90 Branco</h5>
+                                <h3><p class="card-text">
+                                    R$ 139,99       
+                                </p></h3>
+                                    <a href="produto.html" class="btn btn-primary">Ver Produto</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="card">
+                                <img src="/produtos/calçados/Chuteira_X_Crazyfast.1_Society_Branco_IE6632.avif" class="card-img-top" alt="Produto 4">
+                                <div class="card-body">
+                                    <h5 class="card-title">Chuteira X Crazyfast.1 Society</h5>
+                                    <h3><p class="card-text">
+                                        R$ 199,99
+                                        </p></h3>
+                                    <a href="produto.html" class="btn btn-primary">Ver Produto</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
 
         <!-- Seção de Novidades -->
-        <section id="newsSection" class="my-5">
-            <h2 class="text-center mb-4">Novidades</h2>
-            <div class="row">
-                <div class="col-md-4">
+        <!-- Seção de Produtos em Destaque -->
+        <section id="productsSection" class="my-5">
+            <h2 class="text-center mb-4">Acessórios</h2>
+            <div class="row" id="productsList">
+                <!-- Os produtos serão adicionados dinamicamente aqui -->
+                <!-- Exemplo de produto estático -->
+                <div class="col-md-3">
                     <div class="card">
-                        <img src="https://via.placeholder.com/300" class="card-img-top" alt="Notícia 2">
+                        <img src="/produtos/assesorios/WhatsApp Image 2024-12-03 at 14.41.56.jpeg" class="card-img-top" alt="Produto 1">
                         <div class="card-body">
-                            <h5 class="card-title">Promoções Imperdíveis</h5>
-                            <p class="card-text">Aproveite os descontos incríveis em vários produtos.</p>
-                            <a href="#" class="btn btn-primary">Leia Mais</a>
+                            <h5 class="card-title">BOLSA NIKE BRASILIA UNISSEX</h5>
+                            <h3><p class="card-text">
+                                R$ 149,99
+                            </p></h3>
+                            <a href="produto.html" class="btn btn-primary">Ver Produto</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="card">
-                        <img src="https://via.placeholder.com/300" class="card-img-top" alt="Notícia 3">
+                        <img src ="/produtos/assesorios/bola de basquete2.png" class="card-img-top" alt="Produto 2">
                         <div class="card-body">
-                            <h5 class="card-title">Novos Serviços Disponíveis</h5>
-                            <p class="card-text">Agora contamos com mais opções de serviços exclusivos.</p>
-                            <a href="#" class="btn btn-primary">Leia Mais</a>
+                            <h5 class="card-title">Bola de basquete</h5>
+                        <h3><p class="card-text">
+                            R$ 199,99
+                                </p></h3>
+                            <a href="produto.html" class="btn btn-primary">Ver produto</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card">
+                        <img src="/produtos/assesorios/WhatsApp Image 2024-12-03 at 14.40.01.jpeg" class="card-img-top" alt="Produto 3">
+                        <div class="card-body">
+                            <h5 class="card-title">BOLSA NIKE ELEMENTAL PREMIUM</h5>
+                        <h3><p class="card-text">
+                            R$ 119,99       
+                        </p></h3>
+                            <a href="produto.html" class="btn btn-primary">Ver Produto</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card">
+                        <img src="/produtos/assesorios/bola.jpg" class="card-img-top" alt="Produto 4">
+                        <div class="card-body">
+                            <h5 class="card-title">Bola de Futebol Penalty S11</h5>
+                            <h3><p class="card-text">
+                                R$ 189,99
+                                </p></h3>
+                            <a href="produto.html" class="btn btn-primary">Ver Produto</a>
                         </div>
                     </div>
                 </div>
