--- a/frontend/public/assets/paginas/sobre/sobreNos.html
+++ b/frontend/public/assets/paginas/sobre/sobreNos.html
@@ -18,18 +18,20 @@
             <!-- Seção sobre nossa equipe -->
             <div class="col-md-6">
                 <h2 class="mb-4">Nossa Equipe</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque tempus nisl at magna scelerisque, eu sollicitudin ante dapibus. Mauris ac ex eu nulla fermentum sodales. Sed et nunc risus. Fusce malesuada mi eget dui fermentum, eu vehicula purus suscipit.</p>
+                <p>Nossa equipe é formada por cinco integrantes que trabalham com total profissionalismo e eficiençia para desenvolver o melhor serviço para nossos clientes.</p>
                 <ul>
-                    <li><strong>João Silva</strong> - CEO e Fundador</li>
-                    <li><strong>Ana Costa</strong> - Diretora de Marketing</li>
-                    <li><strong>Paulo Souza</strong> - Diretor de Operações</li>
+                    <li><strong>Ana Beatriz Rios</strong> - Diretora de Marketing</li>
+                    <li><strong>Emerson Santos</strong> - Diretora de Marketing</li>
+                    <li><strong>Gleisson Gabriel</strong> -  CEO</li>
+                    <li><strong>Kaio Fabio</strong> - Diretor de Operações</li>
+                    <li><strong>Suênnia Martins</strong> -  CEO e Fundador</li>
                 </ul>
             </div>
 
             <!-- Seção sobre o motivo do projeto -->
             <div class="col-md-6">
                 <h2 class="mb-4">Motivo do Projeto</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt massa ut nunc placerat, vel volutpat augue tincidunt. Integer facilisis ex eu neque tempor, in lacinia felis lobortis. Ut a augue ligula. Sed a eros sit amet elit sodales iaculis.</p>
+                <p>O mercado esportivo tem se destacado muito nos ultimos anos principalmente o e commerce, tornando-se uma tendência Global e muito lucrativo, O interesse por esportes e atividades físicas está em alta, especialmente após a pandemia. Cada vez mais pessoas buscam se exercitar e manter um estilo de vida saudável.</p>
             </div>
         </div>
 
@@ -37,18 +39,19 @@
             <!-- Seção sobre como foi a ideia -->
             <div class="col-md-6">
                 <h2 class="mb-4">Como Foi a Ideia</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras et felis ut leo cursus viverra ac ac urna. Aliquam erat volutpat. Suspendisse potenti. Integer quis eros vel nunc dictum lacinia. Donec nec orci ut felis placerat auctor ac vel urna.</p>
+                <p>A loja surgiu por meio de uma ideia aleatoria, como todos os integrantes gostam de algum tipo de esporte todos concordaram com unanimidade, e assim decidimos pesquisar mais sobre o assunto e tivemos a conclusão que essa seria a nossa loja.</p>
             </div>
 
             <!-- Seção sobre os integrantes do projeto -->
             <div class="col-md-6">
                 <h2 class="mb-4">Os Integrantes</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mollis dui id dui tincidunt, sed facilisis ligula vehicula. Cras vel elit sit amet risus suscipit cursus. Nunc vel mauris ac lectus tincidunt fermentum et sed velit. Proin eget arcu vel elit tristique maximus.</p>
+                <p>Cada integrante tem uma caracteristicas que ajudam a loja e definem a cara da PXP, o que cada integrante poder contribuir para a empresa e mesmo assim continuarem com o bom relacionamento da equipe, eles irão dar o máximo de si, se fosse nos definir por uma palavra seria "superação".</p>
                 <ul>
-                    <li><strong>João Silva</strong> - CEO</li>
-                    <li><strong>Ana Costa</strong> - Diretora de Marketing</li>
-                    <li><strong>Paulo Souza</strong> - Diretor de Tecnologia</li>
-                </ul>
+                    <li><strong>Ana Beatriz Rios</strong> - Diretora de Marketing</li>
+                    <li><strong>Emerson Santos</strong> - Diretora de Marketing</li>
+                    <li><strong>Gleisson Gabriel</strong> -  CEO</li>
+                    <li><strong>Kaio Fabio</strong> - Diretor de Operações</li>
+                    <li><strong>Suênnia Martins</strong> -  CEO e Fundador</li>
             </div>
         </div>
     </main>
