--- a/frontend/src/componentes/footer.html
+++ b/frontend/src/componentes/footer.html
@@ -2,7 +2,7 @@
     <div class="container py-4">
         <div class="row">
             <div class="col-md-4 text-center">
-                <img src="/COdegos/PXP/public/assets/img/logoClaro.jpeg" alt="Logo" class="logo" style="width: 130px;">
+                <img src="/Logo/3.png" alt="Logo" class="logo" style="width: 130px;">
             </div>
             <div class="col-md-4 text-center">
                 <ul class="list-unstyled">
