--- a/frontend/src/paginas/produto.html
+++ b/frontend/src/paginas/produto.html
@@ -22,11 +22,16 @@
 
             <!-- Detalhes do Produto -->
             <div class="col-md-6">
-                <h2>Nome do Produto</h2>
-                <p class="text-muted">Categoria do Produto</p>
+                <h2>Camisa Seleção França</h2>
+                <p class="text-muted">Roupas</p>
                 <h3 class="text-success">R$ 199,99</h3>
 
-                <p class="mt-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam non urna leo. Cras dapibus risus non metus pharetra, eu dictum turpis sollicitudin.</p>
+                <p class="mt-4">Clube/Time: França,
+                    Definição da Tecnologia: Tecido de desempenho que afasta o suor da pele paa ajudá-lo a se manter seco e confortável.
+                    Manga: Manga Curta,
+                    Composição: 100% Poliéster reciclado,
+                    Garantia do Fabricante: Contra Defeito de Fabricação
+                    Marca: Nike.</p>
 
                 <ul>
                     <li><strong>Características:</strong></li>
