--- a/frontend/src/paginas/loja.html
+++ b/frontend/src/paginas/loja.html
@@ -6,11 +6,20 @@
     <title>Loja PXP - Página Inicial</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../../public/assets/css/estilo.css"> <!-- Link para o seu estilo personalizado -->
+    <link rel="stylesheet" href="/frontend/public/assets/css/estilo.css"> <!-- Link para o seu estilo personalizado -->
 </head>
 <body>
     <!-- Inclui o Cabeçalho -->
-    <div id="header"></div>
+    <div id="header">
+        <style>
+            .custom-header {
+                background-color: #083836; /* Altere para a cor desejada */
+            }
+        </style>
+    
+    <!-- Header -->
+    <header class="custom-header py-3">
+    </div>
 
     <!-- Conteúdo Principal -->
     <main class="container my-5">
@@ -37,7 +46,7 @@
                 <!-- Exemplo de produto estático -->
                 <div class="col-md-3">
                     <div class="card">
-                        <img src="/prof-loja-modelo/produtos/roupas/camisa-franca.jpeg" class="card-img-top" alt="Produto 1">
+                        <img src="/produtos/roupas/camisa-franca.jpeg" class="card-img-top" alt="Produto 1">
                         <div class="card-body">
                             <h5 class="card-title">Camisa Seleção França I Home 22/23 Mbappé 10 Torcedor Nike Masculina - Azul</h5>
                             <p class="card-text">
@@ -54,7 +63,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="card">
-                        <img src="/prof-loja-modelo/produtos/roupas/camisa-psg.jpeg" class="card-img-top" alt="Produto 2">
+                        <img src="/produtos/roupas/camisa-psg.jpeg" class="card-img-top" alt="Produto 2">
                         <div class="card-body">
                             <h5 class="card-title">Camisa Paris Saint-Germain Away 20/21 s/n° Torcedor Nike Masculina - Branco+Azul</h5>
                             <p class="card-text">
@@ -73,7 +82,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="card">
-                        <img src="/prof-loja-modelo/produtos/roupas/calmisa-espanha.jpeg" class="card-img-top" alt="Produto 3">
+                        <img src="/produtos/roupas/calmisa-espanha.jpeg" class="card-img-top" alt="Produto 3">
                         <div class="card-body">
                             <h5 class="card-title">Camisa Seleção Holanda Away 20/21 s/n° Torcedor Nike Masculina - Preto+Laranja" descrção curta</h5>
                             <p class="card-text">
@@ -91,7 +100,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="card">
-                        <img src="/prof-loja-modelo/produtos/assesorios/bola.jpg" class="card-img-top" alt="Produto 4">
+                        <img src="/produtos/assesorios/bola.jpg" class="card-img-top" alt="Produto 4">
                         <div class="card-body">
                             <h5 class="card-title">Bola de Futebol Penalty S11</h5>
                             <p class="card-text">Caracteristicas: 
@@ -100,7 +109,7 @@
                                 Gomos: 14
                                 Laminado: PU
                                 Construção: Termotc</p>
-                            <a href="produto.html" class="btn btn-primary">Ver Produto</a>
+                            <a href="./produto.html" class="btn btn-primary">Ver Produto</a>
                         </div>
                     </div>
                 </div>
@@ -113,7 +122,7 @@
             <div class="row text-center">
                 <div class="col-md-4">
                     <a href="#" class="btn btn-outline-primary w-100">Roupas</a>
-                    <img style="width: 230px;" src="/COdegos/PXP/public/assets/img/mais-vendidos.png" alt="">
+                    <img style="width: 230px;" src="/COdegos/PXP/public/assets/img/Roupas" alt="">
                 </div>
                 <div class="col-md-4">
                     <a href="#" class="btn btn-outline-primary w-100">Assesorios</a>
