--- a/frontend/public/assets/paginas/sobre/sobreLoja.html
+++ b/frontend/public/assets/paginas/sobre/sobreLoja.html
@@ -62,11 +62,11 @@
             <div class="col-md-6">
                 <h3 class="mb-4">Nossos Fundadores</h3>
                 <ul>
-                    <li><strong>Ana Beatriz Rios</strong> - Fundador</li>
+                    <li><strong>Ana Beatriz Rios</strong> - Fundadora</li>
                     <li><strong>Emerson Santos</strong> - Fundador</li>
                     <li><strong>Gleisson Gabriel</strong> - Fundador</li>
                     <li><strong>Kaio Fabio</strong> - Fundador</li>
-                    <li><strong>Suênnia Martins</strong> - Fundador</li>
+                    <li><strong>Suênnia Martins</strong> - Fundadora</li>
                 </ul>
 
         </div>
